force-app/main/default/objects/CRMG_WF__Action__c/CRMG_WF__Action__c.object-meta.xml
<CustomObject>
    <label>Action</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Action</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>