force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Alert</fullName>
                <default>true</default>
                <label>Email Alert</label>
            </value>
            <value>
                <fullName>Field Update</fullName>
            </value>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>New Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>