force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Assign_To__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Assign_To__c</fullName>
    <label>Assign To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>