force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__BaseObject__c</fullName>
    <label>Source Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>