force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eAdditional_Emails__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eAdditional_Emails__c</fullName>
    <label>Additional Emails</label>
    <type>TextArea</type>
</CustomField>