force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eEmail_from_WF_User__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eEmail_from_WF_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email from Workflow User</label>
    <type>Checkbox</type>
</CustomField>