force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eEmailTemplet__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eEmailTemplet__c</fullName>
    <label>Email Template</label>
    <length>18</length>
    <type>Text</type>
</CustomField>