force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eRecipients__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eRecipients__c</fullName>
    <label>Recipients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>