force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eReply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eReply_To_Email_Address__c</fullName>
    <label>Reply To Email Address</label>
    <type>Email</type>
</CustomField>