force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__eSender_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__eSender_Name__c</fullName>
    <label>Sender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>