force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__fFiedl_from__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__fFiedl_from__c</fullName>
    <label>Field From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>