force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__fFormula_Text__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__fFormula_Text__c</fullName>
    <label>Formula Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>