force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Field_Paste__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Field_Paste__c</fullName>
    <label>Field Paste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>