force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Field_To_Update__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Field_To_Update__c</fullName>
    <label>Field To Update</label>
    <length>255</length>
    <type>Text</type>
</CustomField>