force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Field_Values__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Field_Values__c</fullName>
    <label>Field Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>