force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__fRe_evelute__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__fRe_evelute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-evaluate</label>
    <type>Checkbox</type>
</CustomField>