force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__fText_Options__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__fText_Options__c</fullName>
    <label>Text Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>null</fullName>
                <default>true</default>
                <label>null</label>
            </value>
            <value>
                <fullName>formula</fullName>
            </value>
            <value>
                <fullName>hardcode</fullName>
            </value>
            <value>
                <fullName>CopyPaste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>