force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>