force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__ParentObject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__ParentObject__c</fullName>
    <label>ParentObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>