force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Recipient_Type__c</fullName>
    <label>Recipient Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>