force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tAssignedTo_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tAssignedTo_Type__c</fullName>
    <label>Assigned To Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Record Owner</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>