force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tDate_Field__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tDate_Field__c</fullName>
    <label>Date Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>