force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tDate_Number__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tDate_Number__c</fullName>
    <label>Date Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>