force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tDate_Pluss_Minus__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tDate_Pluss_Minus__c</fullName>
    <label>Date Plus/Minus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>plus</fullName>
                <default>true</default>
                <label>plus</label>
            </value>
            <value>
                <fullName>minus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>