force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tNotify_Assignee__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tNotify_Assignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Assignee</label>
    <type>Checkbox</type>
</CustomField>