force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tPriority__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tPriority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>