force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tProtected_Component__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tProtected_Component__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Protected Component</label>
    <type>Checkbox</type>
</CustomField>