force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__tSubject__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__tSubject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>