force-app/main/default/objects/CRMG_WF__Action__c/fields/CRMG_WF__Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMG_WF__Unique_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>